added more code, css, and visuals

--- a/index.html
+++ b/index.html
@@ -9,5 +9,12 @@
   <h1>Discover hidden places in the world around you</h1>
   <br>
   <a href=""><p id=download>Download Excursion (Coming Soon!)</p></a>
+  <center><video src="/Users/smileyc/Documents/Projects/excursion/resources/video/excursion.mp4" autoplay poster="posterimage.jpg">
+  </video>
+  <h2>Your personal travel guide</h1>
+  <h3>Excursion remembers places you like, and recommends new points of interest around you.</h2>
+  <img src="/Users/smileyc/Documents/Projects/excursion/resources/images/camp.jpg" alt="camp at night">
+
+</center>
   </body>
 </html>
